# edgeware-wallet

./: .gitignore  Cargo.toml  Makefile.toml  README.md  analysis_options.yaml  cbindgen.toml  pubspec.yaml
.cargo/: config.toml
.github/workflows/: android.yml  ios.yml  lints.yml
android/app/: build.gradle  proguard-rules.pro
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner/Base.lproj/: LaunchScreen.storyboard
lib/: app.dart  bindings.dart  constants.dart  main.dart  wallet.dart
lib/model/: contact.dart
lib/screen/: screens.dart
lib/screen/auth/: controller.dart  view.dart
lib/screen/contacts/: controller.dart  view.dart
lib/screen/generate_account/: controller.dart  view.dart
lib/screen/home/: controller.dart  view.dart
lib/screen/intro/: controller.dart  view.dart
lib/screen/legal/: view.dart
lib/screen/me/: controller.dart  view.dart
lib/screen/my_information/: controller.dart  view.dart
lib/screen/qrscan/: controller.dart  view.dart
lib/service/: database.dart  preferences.dart  secure_storage.dart  services.dart
lib/shared/: account_info.dart  contacts.dart  edgeware_account.dart  shared.dart
lib/util/: address_format.dart  connectivity.dart  edg_format.dart  name_format.dart  qr.dart  snackbar.dart  utils.dart
lib/widget/: button.dart  input.dart  my_alert_dialog.dart  numpad.dart  widgets.dart
native/edgeware/: Cargo.toml  binding.h
native/edgeware/src/: array.rs  client.rs  crypto.rs  error.rs  lib.rs  macros.rs  models.rs  runtime.rs  shared_ptr.rs  utils.rs
test/: widget_test.dart
(+12 files in other folders)
