[package]
name = "edgeware"
version = "0.1.0"
authors = ["Shady Khalifa <shekohex@gmail.com>"]
edition = "2018"

[lib]
# this value will change depending on the target os
# for iOS it would be `staticlib`
# for android it would be `c-dylib` (without the dash)
crate-type = ["rlib"]

[dependencies]
log = "^0.4"

