[package]
name = "edgeware"
version = "0.1.0"
authors = ["Shady Khalifa <shekohex@gmail.com>"]
edition = "2018"

[lib]
# this value will change depending on the target os
# for iOS it would be `staticlib`
# for android it would be `c-dylib` (without the dash)
crate-type = ["rlib"]

[dependencies]
log = "^0.4"
substrate-subxt = "0.13"
zeroize = "1.1"
tiny-bip39 = "0.8"
thiserror = "^1.0"
anyhow = "^1.0"
allo-isolate = { version = "0.1.8-beta", features = ["catch-unwind"] }
async-std = "1.7"

